--- a/apps/toolai/src/styles.css
+++ b/apps/toolai/src/styles.css
@@ -4,6 +4,17 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: theme("colors.gray-dark");
+  overflow: hidden
+}
+
 .sidebar-icon svg{
   width: 30px;
   height: 30px
